fix: overflow 부모태그 수정

--- a/iPad/css/style.css
+++ b/iPad/css/style.css
@@ -660,6 +660,7 @@ body {
 
 #ipad__main7__sec2,
 #ipad__main7__sec3 {
+    overflow: hidden;
     background-color: #000;
     height: 658px;
     transition: all 0.3s;
